--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.22",
@@ -26,6 +27,7 @@
     "@types/node": "^20.8.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
+    "prisma": "^5.4.1",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
